--- a/legal.html
+++ b/legal.html
@@ -39,7 +39,7 @@
     <p><strong>Statut :</strong> Site personnel non commercial</p>
 
     <p><strong>Hébergement :</strong><br>
-        GitHub Pages.
+        GitHub Pages
     </p>
 
     <h2>Politique de confidentialité</h2>
