--- a/legal.html
+++ b/legal.html
@@ -38,9 +38,7 @@
     <p><strong>Nom du site :</strong> UHC Factory</p>
     <p><strong>Statut :</strong> Site personnel non commercial</p>
 
-    <p><strong>Hébergement :</strong><br>
-        GitHub Pages
-    </p>
+    <p><strong>Hébergement :</strong> GitHub Pages</p>
 
     <h2>Politique de confidentialité</h2>
     <p>Ce site ne collecte aucune donnée personnelle à des fins commerciales.</p>
