--- a/apropos.html
+++ b/apropos.html
@@ -51,7 +51,7 @@
 
       <div class="sous-bloc">
         <h4>Graphisme</h4>
-        <p>Aucun membre pour le moment</p>
+        <p>Jolanoups -> Graphiste</p>
       </div>
 
       <div class="sous-bloc">
