--- a/apropos.html
+++ b/apropos.html
@@ -51,7 +51,9 @@
 
       <div class="sous-bloc">
         <h4>Graphisme</h4>
-        <p>Jolanoups -> Graphiste</p>
+        <ul>
+          <li>Jolanoups → Graphiste</li>
+        </ul>
       </div>
 
       <div class="sous-bloc">
