--- a/apropos.html
+++ b/apropos.html
@@ -11,7 +11,7 @@
   <nav class="navbar">
     <div class="logo">
       <a href="index.html">
-        <img src="logo.png" alt="UHC Factory Logo" class="logo-img" />
+        <img src="images/logo.png" alt="UHC Factory Logo" class="logo-img" />
       </a>
     </div>
     <ul class="nav-links">
@@ -21,7 +21,7 @@
       <li><a href="https://uhc-factory.gitbook.io/uhc-factory" target="_blank">Document</a></li>
       <li>
         <a href="https://discord.gg/XeDFVQHmbd" target="_blank" title="Rejoindre le Discord">
-          <img src="discord-logo.png" alt="Discord" class="discord-icon" />
+          <img src="images/discord-logo.png" alt="Discord" class="discord-icon" />
         </a>
       </li>
     </ul>
