--- a/legal.html
+++ b/legal.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
         <div class="logo">
             <a href="index.html">
-                <img src="logo.png" alt="UHC Factory Logo" class="logo-img" />
+                <img src="images/logo.png" alt="UHC Factory Logo" class="logo-img" />
             </a>
         </div>
         <ul class="nav-links">
@@ -22,7 +22,7 @@
             <li><a href="https://uhc-factory.gitbook.io/uhc-factory" target="_blank">Document</a></li>
             <li>
                 <a href="https://discord.gg/XeDFVQHmbd" target="_blank">
-                    <img src="discord-logo.png" alt="Discord" class="discord-icon" />
+                    <img src="images/discord-logo.png" alt="Discord" class="discord-icon" />
                 </a>
             </li>
         </ul>
